kubernetes/tunnel-server/moosicbox-tunnel-server-lb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.32.0 (765fde254)
    labels:
        io.kompose.service: moosicbox-tunnel-server-lb
    name: moosicbox-tunnel-server-lb
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: moosicbox-tunnel-server-lb
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert -f compose.yaml
                kompose.version: 1.32.0 (765fde254)
            labels:
                io.kompose.network/moosicboxserver-default: 'true'
                io.kompose.service: moosicbox-tunnel-server-lb
        spec:
            imagePullSecrets:
                - name: registry-moosicbox
            containers:
                - image: registry.digitalocean.com/moosicbox/load-balancer:latest
                  imagePullPolicy: Always
                  name: moosicbox-tunnel-server-lb
                  ports:
                      - containerPort: 8007
                        hostPort: 80
                        protocol: TCP
            restartPolicy: Always
