kubernetes/tunnel-server/moosicbox-tunnel-server-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.32.0 (765fde254)
        service.beta.kubernetes.io/do-loadbalancer-certificate-id: "bfbe6b38-7c9b-469c-b40c-c1011d586f15"
        service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
        service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
        service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
        service.beta.kubernetes.io/do-loadbalancer-healthcheck-port: "80"
        service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: "http"
        service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/health"
        service.beta.kubernetes.io/do-loadbalancer-healthcheck-check-interval-seconds: "10"
        service.beta.kubernetes.io/do-loadbalancer-healthcheck-response-timeout-seconds: "5"
        service.beta.kubernetes.io/do-loadbalancer-healthcheck-unhealthy-threshold: "3"
        service.beta.kubernetes.io/do-loadbalancer-healthcheck-healthy-threshold: "5"
    labels:
        io.kompose.service: moosicbox-tunnel-service
    name: moosicbox-tunnel-service
spec:
    type: LoadBalancer
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 8004
        - name: https
          protocol: TCP
          port: 443
          targetPort: 8004
    selector:
        io.kompose.service: moosicbox-tunnel-server
